--- a/widget/res/values/strings.xml
+++ b/widget/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
 
-    <string name="app_name">widget</string>
-	<string name="widget_name">My second widget 1111</string>
+    <string name="app_name">Turn hotspot</string>
+	<string name="widget_name">Turn hotspot widget</string>
 	
 	<string name="config">Config</string>
 	<string name="update">Update</string>
 	<string name="count">Count</string>
+	
+	
 	<string name="ok">Ok</string>
+	<string name="auto">Turn wifi hotspot when charger connected</string>
 		
     
 </resources>
