--- a/widget/res/values/strings.xml
+++ b/widget/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
 
-    <string name="app_name">Turn hotspot</string>
+    <string name="app_name">Turn hotspot widget</string>
 	<string name="widget_name">Turn hotspot widget</string>
 	
-	<string name="hotspot">Hotspot</string>
+	<string name="hotspot">Hotspot...</string>
 	
 	<string name="ok">Ok</string>
 	<string name="auto">Turn wifi hotspot when charger connected</string>
-		
     
 </resources>
