--- a/widget/res/values/strings.xml
+++ b/widget/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <string name="app_name">Turn hotspot widget</string>
 	<string name="widget_name">Turn hotspot widget</string>
+	<string name="widget_text">Turn hotspot</string>
 	
 	<string name="hotspot">Hotspot...</string>
 	
